erDiagram
    customers {
        bigint id PK
        varchar customer_number UK "고객번호"
        varchar name "이름"
        date birth_date "생년월일"
        varchar phone "전화번호"
        varchar email "이메일"
        varchar ci UK "CI (중복가입방지)"
        varchar di "DI"
        boolean kyc_verified "본인인증 여부"
        timestamp kyc_verified_at "본인인증 일시"
        varchar verification_method "인증수단 (PASS, NICE, KAKAO)"
        varchar status "상태 (active, dormant, closed)"
        timestamp created_at
        varchar created_by
        timestamp updated_at
        varchar updated_by
        timestamp deleted_at "Soft Delete"
    }

    accounts {
        bigint id PK
        varchar account_number UK "계좌번호"
        varchar account_type "계좌유형 (savings, checking, deposit)"
        varchar currency "통화"
        varchar status "상태 (active, frozen, closed)"
        decimal interest_rate "이자율"
        timestamp opened_at "개설일"
        timestamp closed_at "해지일"
        timestamp created_at
        varchar created_by
        timestamp updated_at
        varchar updated_by
        timestamp deleted_at "Soft Delete"
    }

    account_holders {
        bigint account_id FK
        bigint customer_id FK
        varchar holder_type "보유자유형 (primary, joint, authorized)"
        varchar relationship "관계 (owner, spouse, representative)"
        date effective_from "유효시작일"
        date effective_to "유효종료일"
    }

    transactions {
        bigint id PK
        varchar transaction_number UK "거래번호"
        bigint from_account_id FK "출금계좌"
        bigint to_account_id FK "입금계좌"
        decimal amount "금액"
        varchar currency "통화"
        varchar transaction_type "거래유형 (deposit, withdrawal, transfer, interest, fee)"
        varchar status "상태 (pending, completed, failed, cancelled, reversed)"
        text description "설명"
        timestamp executed_at "실행일시"
        varchar executed_by "실행자"
        bigint original_transaction_id FK "원거래 ID (취소 시)"
        bigint reversed_transaction_id "취소 거래 ID"
        varchar external_reference "외부 시스템 참조번호"
        timestamp created_at
    }

    transaction_details {
        bigint id PK
        bigint transaction_id FK
        varchar detail_type "상세유형 (fee, tax, exchange, memo)"
        varchar detail_key "키"
        text detail_value "값"
        timestamp created_at
    }

    account_balances {
        bigint account_id PK
        decimal balance "잔액"
        date as_of_date "기준일"
        bigint last_transaction_id FK "마지막 반영 거래 ID"
        timestamp updated_at
    }

    cards {
        bigint id PK
        varchar card_number UK "카드번호 (암호화 필요!)"
        varchar card_type "카드유형 (debit, credit, prepaid)"
        bigint account_id FK "연결 계좌"
        date issue_date "발급일"
        date expiry_date "만료일"
        varchar status "상태 (active, blocked, lost, expired)"
        decimal daily_limit "일일한도"
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    loans {
        bigint id PK
        varchar loan_number UK "대출번호"
        bigint account_id FK "대출 지급 계좌"
        varchar loan_type "대출유형 (mortgage, personal, auto)"
        decimal principal_amount "원금"
        decimal interest_rate "이자율"
        date disbursement_date "실행일"
        date maturity_date "만기일"
        varchar status "상태 (active, overdue, completed, defaulted)"
        timestamp created_at
        timestamp updated_at
    }

    loan_schedules {
        bigint id PK
        bigint loan_id FK
        date due_date "납부일"
        decimal principal_amount "원금"
        decimal interest_amount "이자"
        date paid_date "납부완료일"
        decimal paid_amount "납부금액"
        bigint transaction_id FK "실제 납부 거래"
    }

    account_history {
        bigint id PK
        bigint account_id FK
        varchar field_name "변경된 필드명"
        text old_value "이전 값"
        text new_value "새 값"
        timestamp changed_at
        varchar changed_by "변경자"
        text reason "변경 사유"
    }

    audit_logs {
        bigint id PK
        varchar table_name "테이블명"
        bigint record_id "레코드 ID"
        varchar action "액션 (INSERT, UPDATE, DELETE)"
        text old_data "변경 전 데이터"
        text new_data "변경 후 데이터"
        varchar user_id "사용자 ID"
        varchar ip_address "IP 주소"
        timestamp occurred_at
    }

    %% Relationships
    loans ||--o{ loan_schedules : "loan_id"
    accounts ||--o{ cards : "account_id"
    transactions ||--o{ account_balances : "last_transaction_id"
    accounts ||--o{ account_history : "account_id"
    transactions ||--o{ transactions : "original_transaction_id"
    transactions ||--o{ loan_schedules : "transaction_id"
    customers ||--o{ account_holders : "customer_id"
    accounts ||--o{ transactions : "from_account_id"
    accounts ||--o{ transactions : "to_account_id"
    accounts ||--o{ account_holders : "account_id"
    accounts ||--o{ account_balances : "account_id"
    transactions ||--o{ transaction_details : "transaction_id"
    accounts ||--o{ loans : "account_id"
